/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.3/userguide/java_library_plugin.html
 */

// Apply the java-library plugin to add support for Java Library
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'visual-studio'
apply plugin: 'application'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

mainClassName = 'bot.GeekBot'

eclipse.project {
  buildCommand 'org.eclipse.buildship.core.gradleprojectbuilder'
  natures 'org.eclipse.buildship.core.gradleprojectnature'
}

idea.module {
  downloadJavadoc = true
  //inheritOutputDirs = true
}



compileJava {
    options.release = 8
}



// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
	mavenCentral()
	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
	maven { url 'https://csspeechstorage.blob.core.windows.net/maven/' }
}

dependencies {
	//implementation 'com.discord4j:discord4j-core:3.0'
	  compile group: 'com.github.koraktor', name:'steam-condenser', version:'1.3.9'
	  compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
    compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
    
     //        <groupId>com.microsoft.cognitiveservices.speech</groupId>
   //      <artifactId>client-sdk</artifactId>
 //        <version>1.13.0</version>
    compile group: 'com.microsoft.cognitiveservices.speech', name: 'client-sdk', version: '1.13.0'
	compile 'com.jagrosh:jda-utilities:3.0.4'
    compile 'net.dv8tion:JDA:4.2.0_168'
	compile 'com.google.api-client:google-api-client:1.30.2'
	compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.4'
	compile 'com.google.apis:google-api-services-youtube:v3-rev212-1.25.0'
	compile 'com.google.code.gson:gson:2.8.6'
	compile 'com.google.http-client:google-http-client-gson:1.33.0'
	compile 'org.apache.commons:commons-io:1.3.2'
 compile 'com.google.guava:guava:28.2-jre'
    testImplementation 'junit:junit:4.12'
    compile 'ch.qos.logback:logback-classic:1.2.3'
	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
}

jar {
    manifest {
        attributes(
            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
            'Main-Class': 'bot.GeekBot'
        )
    }
}

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allJava
}

task fatJar(type: Jar) {
    classifier = 'fat'
//    appendix = 'fat'
    from sourceSets.main.output

    dependsOn configurations.runtimeClasspath
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }

    manifest {
        attributes(
            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
            'Main-Class': 'bot.GeekBot'
        )
    }
}
